@@ -3795,7 +3795,7 @@ $(top_builddir)/DerivedSources/webkit/WebKitDOMObject.h:
 	cp -f $(WebCore)/bindings/gobject/WebKitDOMObject.h $@
 
 # Start with a subset of all the DOM bindings
-IDL_BINDINGS_GDOM := \
+IDL_BINDINGS_GDOM += \
 	WebCore/css/CSSRule.idl \
 	WebCore/css/CSSRuleList.idl \
 	WebCore/css/CSSStyleDeclaration.idl \
@@ -3911,18 +3911,18 @@ IDL_BINDINGS_GDOM := \
 	WebCore/xml/XPathResult.idl
 
 # All classes autogenerated in the GObject DOM bindings
-GDOM_AUTO_CLASSES := $(basename $(notdir $(IDL_BINDINGS_GDOM)))
+GDOM_AUTO_CLASSES += $(basename $(notdir $(IDL_BINDINGS_GDOM)))
 
 # The classes implemented manually
-GDOM_FIXED_CLASSES := Object
+GDOM_FIXED_CLASSES += Object
 
-GDOM_CLASSES := $(GDOM_AUTO_CLASSES) $(GDOM_FIXED_CLASSES)
+GDOM_CLASSES += $(GDOM_AUTO_CLASSES) $(GDOM_FIXED_CLASSES)
 
 # Filter out SVG for now
 FEATURE_DEFINES_GDOM := $(filter-out ENABLE-SVG%, $(FEATURE_DEFINES))
 
 # Autogenerated header files
-GDOM_HEADERS_BUILT := $(patsubst %,DerivedSources/webkit/WebKitDOM%.h,$(GDOM_AUTO_CLASSES)) \
+GDOM_HEADERS_BUILT += $(patsubst %,$(top_builddir)/DerivedSources/webkit/WebKitDOM%.h,$(GDOM_AUTO_CLASSES)) \
 	$(top_builddir)/DerivedSources/webkit/webkitdom.h \
 	$(top_builddir)/DerivedSources/webkit/webkitdomdefines.h \
 	$(top_builddir)/DerivedSources/webkit/WebKitDOMObject.h
@@ -3931,10 +3931,10 @@ GDOM_HEADERS_BUILT := $(patsubst %,DerivedSources/webkit/WebKitDOM%.h,$(GDOM_AUT
 GDOM_SOURCES_BUILT := $(patsubst %,DerivedSources/webkit/WebKitDOM%.cpp,$(GDOM_AUTO_CLASSES))
 
 # Hand-coded header files
-GDOM_HEADERS_FIXED := $(patsubst %,$(srcdir)/WebCore/bindings/gobject/WebKitDOM%.h,$(GDOM_FIXED_CLASSES))
+GDOM_HEADERS_FIXED += $(patsubst %,$(srcdir)/WebCore/bindings/gobject/WebKitDOM%.h,$(GDOM_FIXED_CLASSES))
 
 # All header files that get installed
-libgdom_h_api := $(GDOM_HEADERS_FIXED) $(GDOM_HEADERS_BUILT)
+libgdom_h_api += $(GDOM_HEADERS_FIXED) $(GDOM_HEADERS_BUILT)
 
 DerivedSources/webkit/webkitdom.h: $(WebCore)/bindings/scripts/gobject-generate-headers.pl
 	echo $(GDOM_CLASSES) | $(PERL) $< gdom > $@
