@@ -1,3 +1,12 @@
+2010-05-05  Alejandro G. Castro  <alex@igalia.com>
+
+        Reviewed by Xan Lopez.
+
+        Fixed the gobject introspection compilation with the new DOM
+        bindings, we needed to add DOM objects.
+
+        * GNUmakefile.am:
+
 2010-05-06  Adam Barth  <abarth@webkit.org>
 
         Reviewed by Eric Seidel.
